# HDRFixer

./: .gitignore  CMakeLists.txt  HDRFixer.sln  README.md  fix_script.py  learning.txt  test_csv
docs/plans/: 2026-02-21-hdrfixer-v2-design.md  2026-02-21-hdrfixer-v2-impl.md
src/: CMakeLists.txt
src/HDRFixer.App/: App.xaml  App.xaml.cs  HDRFixer.App.csproj  MainWindow.xaml  MainWindow.xaml.cs
src/HDRFixer.App/ViewModels/: AutoHdrViewModel.cs  BaseViewModel.cs  DashboardViewModel.cs  DiagnosticsViewModel.cs  FixesViewModel.cs  OledViewModel.cs  SettingsViewModel.cs
src/HDRFixer.App/Views/: AutoHdrPage.xaml  AutoHdrPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  DiagnosticsPage.xaml  DiagnosticsPage.xaml.cs  FixesPage.xaml  FixesPage.xaml.cs  OledPage.xaml  OledPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
src/HDRFixer.Core/: Class1.cs  HDRFixer.Core.csproj
src/HDRFixer.Core/AutoHdr/: AutoHdrGameManager.cs
src/HDRFixer.Core/ColorMath/: GammaCorrectionLut.cs  TransferFunctions.cs
src/HDRFixer.Core/ColorProfile/: ColorProfileInstaller.cs  IccBinaryHelpers.cs  IccConstants.cs  Mhc2ProfileWriter.cs  WcsNativeMethods.cs
src/HDRFixer.Core/Diagnostics/: DiagnosticReportBuilder.cs  SystemDiagnostics.cs
src/HDRFixer.Core/Display/: DisplayConfigNativeMethods.cs  DisplayInfo.cs  DxgiDisplayDetector.cs  EdidReader.cs  IDisplayDetector.cs  SdrWhiteLevelReader.cs
src/HDRFixer.Core/Fixes/: AutoHdrFix.cs  FixEngine.cs  FixEngineFactory.cs  GammaCorrectionFix.cs  IFix.cs  IccConflictFix.cs  PixelFormatFix.cs  SdrBrightnessFix.cs
src/HDRFixer.Core/Ipc/: IpcClient.cs  IpcMessage.cs  IpcServer.cs
src/HDRFixer.Core/OledProtection/: OledGuardian.cs
src/HDRFixer.Core/Registry/: HdrRegistryManager.cs  RegistryBackup.cs
src/HDRFixer.Core/Settings/: AppSettings.cs
src/HDRFixer.Service/: HDRFixer.Service.csproj  HdrServiceWorker.cs  Program.cs  Worker.cs
src/HDRFixer.Service/Properties/: launchSettings.json
src/app/: CMakeLists.txt  main.cpp  resource.h  resource.rc
src/app/fixes/: gamma_fix.cpp  gamma_fix.h  hotplug.cpp  hotplug.h  pixel_format_fix.cpp  pixel_format_fix.h  sdr_brightness_fix.cpp  sdr_brightness_fix.h  share_helper.cpp  share_helper.h  watchdog.cpp  watchdog.h
src/app/ui/: settings_wnd.cpp  settings_wnd.h  tray.cpp  tray.h
src/core/: CMakeLists.txt  core.h
src/core/color/: gamma_lut.cpp  gamma_lut.h  transfer_functions.cpp  transfer_functions.h
src/core/config/: settings.cpp  settings.h
src/core/display/: display_config.cpp  display_config.h  display_info.h  dxgi_detector.cpp  dxgi_detector.h  edid_reader.cpp  edid_reader.h
src/core/fixes/: fix_engine.cpp  fix_engine.h
src/core/log/: logger.cpp  logger.h
src/core/profile/: icc_binary.h  mhc2_writer.cpp  mhc2_writer.h  wcs_installer.cpp  wcs_installer.h
src/core/registry/: hdr_registry.cpp  hdr_registry.h  registry_backup.cpp  registry_backup.h
tests/: CMakeLists.txt  doctest.h  test_display_info.cpp  test_edid_reader.cpp  test_fix_engine.cpp  test_gamma_lut.cpp  test_mhc2_writer.cpp  test_registry.cpp  test_registry_backup_csv.cpp  test_sdr_white_level.cpp  test_settings.cpp  test_transfer_functions.cpp
tests/HDRFixer.Core.Tests/: HDRFixer.Core.Tests.csproj  UnitTest1.cs
tests/HDRFixer.Core.Tests/AutoHdr/: AutoHdrGameManagerTests.cs
tests/HDRFixer.Core.Tests/ColorMath/: GammaCorrectionLutTests.cs  TransferFunctionTests.cs
tests/HDRFixer.Core.Tests/ColorProfile/: IccBinaryHelpersTests.cs  Mhc2ProfileWriterTests.cs
tests/HDRFixer.Core.Tests/Diagnostics/: DiagnosticReportBuilderTests.cs  DiagnosticReportBuilderTests_Optimization.cs  HealthScoreCalculatorTests.cs  SystemDiagnosticsTests.cs
tests/HDRFixer.Core.Tests/Display/: DisplayInfoTests.cs  EdidReaderTests.cs  SdrWhiteLevelTests.cs
tests/HDRFixer.Core.Tests/Fixes/: FixEngineFactoryTests.cs  FixEngineTests.cs  IccConflictFixTests.cs  SdrBrightnessFixTests.cs
tests/HDRFixer.Core.Tests/Ipc/: IpcMessageTests.cs  IpcServerSecurityTests.cs
tests/HDRFixer.Core.Tests/OledProtection/: OledGuardianTests.cs
tests/HDRFixer.Core.Tests/Registry/: HdrRegistryManagerTests.cs  RegistryBackupTests.cs  SecurityTests.cs
tests/HDRFixer.Core.Tests/Settings/: AppSettingsTests.cs  SettingsPerformanceTests.cs
tests/mocks/: dxgi1_6.h  shlobj.h  windows.h
tests/mocks/wrl/: client.h
